[gd_scene load_steps=5 format=3 uid="uid://dlmalknb0ogn6"]

[ext_resource type="Script" uid="uid://y1ovawcvs6oi" path="res://UI/pause_menu.gd" id="1_jfm1e"]
[ext_resource type="Script" uid="uid://dg7hgelew38lk" path="res://Actors/custom_button.gd" id="2_03fe5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4cwpn"]
bg_color = Color(0.0507, 0.0916717, 0.13, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.937255, 0.631373, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8nwk"]
bg_color = Color(0.0507, 0.0916717, 0.13, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.866667, 0.337255, 0.223529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfm1e")

[node name="DimBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 444.0
offset_top = 136.5
offset_right = -516.0
offset_bottom = -136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 114

[node name="Resume" type="Button" parent="Container"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Resume"
script = ExtResource("2_03fe5")

[node name="Options" type="Button" parent="Container"]
layout_mode = 2
theme_type_variation = &"MainMenuButton"
theme_override_colors/font_hover_pressed_color = Color(1, 0.937255, 0.631373, 1)
theme_override_colors/font_hover_color = Color(1, 0.937255, 0.631373, 1)
theme_override_colors/font_focus_color = Color(1, 0.937255, 0.631373, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_4cwpn")
text = "Options"
script = ExtResource("2_03fe5")

[node name="MainMenu" type="Button" parent="Container"]
custom_minimum_size = Vector2(192, 48)
layout_mode = 2
theme_type_variation = &"MainMenuButton"
theme_override_colors/font_hover_pressed_color = Color(0.866667, 0.337255, 0.223529, 1)
theme_override_colors/font_hover_color = Color(0.866667, 0.337255, 0.223529, 1)
theme_override_colors/font_focus_color = Color(0.866667, 0.337255, 0.223529, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_d8nwk")
text = "Main Menu"
script = ExtResource("2_03fe5")

[connection signal="pressed" from="Container/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/MainMenu" to="." method="_on_main_menu_pressed"]
